fixes card flexbox wrapping

--- a/index.css
+++ b/index.css
@@ -221,6 +221,7 @@ section h4 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -232,7 +233,8 @@ section h4 {
 }
 
 .card-projects {
-  width: 500px;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .card-image {
